# create-yew-app

./: .gitignore  README.md  index.html  package.json  static.211c473d.js  static.211c473d.js.map  static.4fc3cda7.js  static.4fc3cda7.js.map  static.78250f77.js  static.78250f77.js.map  styles.9403a63e.css  styles.9403a63e.css.map  styles.eda0d2e5.css  styles.eda0d2e5.css.map  tailwind-4bc868aa56a914db.css  tailwind-7b4f45dcf4a45f7a.css  yew-app-323877f64c99018d.js  yew-app-78690604ccdf952b.js  yew-app-82d5d868bcea22bc.js  yew-app-82d5d868bcea22bc_bg.wasm  yew-app-9c877199842583b4.js  yew-app-e5fd0f5456407f17.js  yew-app-e5fd0f5456407f17_bg.wasm  yew_app_bg.5bab8448.wasm  yew_app_bg.80b776b5.wasm  yew_app_bg.b88186fb.wasm  yew_app_bg.e2332b5f.wasm
.github/workflows/: rust.yml
crates/yew-app/: .gitignore  Cargo.toml  index.html  package.json
crates/yew-app-template/: Cargo.toml
crates/yew-app/src/: app.rs  lib.rs  routes.rs
crates/yew-app/src/app/: about.rs  home.rs  mod.rs
crates/yew-app/src/components/: about.rs  app.rs  home.rs  mod.rs  nav.rs
crates/yew-app/src/routes/: about.rs  home.rs  mod.rs
crates/yew-app/static/: index.html  styles.css  styles.scss
crates/yew-app/tests/: lib.rs  web.rs
