[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2018"
license = "Apache-2.0/MIT"
name = "yew-app"
readme = "./README.md"
repository = "https://github.com/jetli/create-yew-app.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
web_logger = "0.2"
yew = { version="0.13.0", features = ["web_sys"] }
yew-router = { version="0.10.0", features = ["web_sys"] }
wasm-bindgen = "0.2.58"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.8"