[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2021"
license = "Apache-2.0/MIT"
name = "yew-app"
readme = "./README.md"
repository = "https://github.com/jetli/create-yew-app.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "1"
reqwest = { version = "0.11.13", features = ["json"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew-hooks = "0.2.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-utils = "0.1.5"

[dev-dependencies.web-sys]
version = "0.3"
features = ["Document", "Element", "HtmlCollection"]
